snapshot_tests/operations/errors/expected/wrongArguments.res.txt

  [1;31mWe've found a bug for you![0m
  [36msnapshot_tests/operations/errors/wrongArguments.res[0m

  This function call is incorrect.
  The function has type:
  (
  ~arg1: [#String],
  ~fragmentName: [#FragmentWithArgs],
  FragmentWithArgs.Raw.t,
) => FragmentWithArgs.t
  
  - Missing arguments that must be provided: ~arg1
  - Hint: Did you want to partially apply the function? You can do that by putting `...` just before the closing parens of the function call. Example: [1;33myourFn(~arg1=someVar, ...)[0m

